--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-server.port=8080
+server.port=9000
 
 spring.datasource.url=jdbc:h2:file:~/payback
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-logging.level.org.springframework.web=info
+logging.level.org.springframework.web=debug
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
